--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+.style{
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  width: 1440px;
+  height: 1025px;
+  left: 0px;
+  top: -1px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  width: 1088px;
+  height: 638px;
+  background: #FFFFFF;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title{
+  width: 1088px;
+  height: 81px;
+
+  background: #0052CC;
+  display: flex;
+  border-radius: 20px 20px 0px 0px;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.contents{
+  width: 1088px;
+  height: 557px;
+  border-radius: 20px 20px 0px 0px;
+  display: flex;
+  align-items: center;
+}
+
+.itemcolumn{
+  width: 260px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+.item{
+  box-sizing: border-box;
+  width: 257.32px;
+  height: 36.01px;
+  border: 1px solid #BDBDBD;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.itemname{
+  width: 100px;
+  height: 36.01px;
+  display: flex;
+  align-items: center;
+
+  font-family: 'Noto Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  flex-direction: column;
+  color: #000000;
 }
